# CodeReviewAssistant

./: README.md  package-lock.json  pyproject.toml
assistant/: Dockerfile.assistant  README.md
assistant/src/assistant/: crew.py  main.py
assistant/src/assistant/config/: agents.yaml  tasks.yaml
monitor_bot/: index.js  package-lock.json  package.json
